# GravityDash

./: .gitignore  CMakeLists.txt  README.md
include/: Animation.h  Animation.hpp  AnimationHandler.h  Bezier.h  Button.h  Character.h  Character.hpp  ConfigMenuType.h  ConfigMenuType.hpp  Controls.h  Controls.hpp  Entity.h  Entity.hpp  Event.h  Event.hpp  Game.h  Game.hpp  GameObject.h  GameStats.h  GameTimer.h  GridMenu.h  GridMenu.hpp  Keyboard.h  MainMenu.h  MainMenu.hpp  Menu.h  MenuButton.h  MenuInterface.h  MenuOption.h  MotionHandler.h  Number.h  Particle.h  Particle.hpp  PlayerBoost.h  Point.h  Point.hpp  Program.h  Program.hpp  ProgramSettings.h  Rect.hpp  (+21 more)
include/game/: BoostComponent.h  Character.h  Entity.h  Game.h  GameComponent.h  GameManager.h  GameObject.h  ObjectSpawnComponent.h  PlayerBoost.h  ScoreComponent.h  TimerComponent.h  World.h
include/menu/: ListItem.h  Menu.h  MenuButton.h  MenuInterface.h  MenuOption.h  StaticButton.h  TitleSequence.h
include/utility/: AnimationHandler.h  AssetManager.h  Attachment.h  Bezier.h  BezierTransition.h  Clock.h  Controls.h  Event.h  Keyboard.h  Number.h  Particle.h  ParticleManager.h  RoundedRect.h  Settings.h  SortedDblyLnkdList.h  Stats.h  Textures.h  Utility.h
src/: Animation.cpp  AnimationHandler.cpp  Bezier.cpp  Button.cpp  Character.cpp  ConfigMenuType.cpp  Controls.cpp  Entity.cpp  Game.cpp  GameObject.cpp  GameObjects.cpp  GameTimer.cpp  GridMenu.cpp  Keyboard.cpp  MainMenu.cpp  Menu.cpp  MenuButton.cpp  MenuInterface.cpp  MenuOption.cpp  MotionHandler.cpp  Number.cpp  Particle.cpp  PlayerBoost.cpp  Point.cpp  Program.cpp  ProgramSettings.cpp  RoundedRect.cpp  ScaleHandler.cpp  Score.cpp  Shader.cpp  Sprite.cpp  Stats.cpp  SubMenu.cpp  Texture.cpp  Textures.cpp  TitleSequence.cpp  Utility.cpp  World.cpp  glad.c  main.cpp  (+2 more)
src/game/: BoostComponent.cpp  Character.cpp  Entity.cpp  Game.cpp  GameComponent.cpp  GameManager.cpp  GameObject.cpp  GameTimer.cpp  ObjectSpawnComponent.cpp  PlayerBoost.cpp  ScoreComponent.cpp  TimerComponent.cpp  World.cpp
src/handlers/: RotationHandler.cpp
src/menu/: ListItem.cpp  Menu.cpp  MenuButton.cpp  MenuInterface.cpp  MenuOption.cpp  StaticButton.cpp  TitleSequence.cpp
src/utility/: AnimationHandler.cpp  AssetManager.cpp  Attachment.cpp  Bezier.cpp  Clock.cpp  Controls.cpp  Event.cpp  GameStats.cpp  Keyboard.cpp  Particle.cpp  ParticleManager.cpp  ProgramSettings.cpp  RoundedRect.cpp  Settings.cpp  Stats.cpp  Textures.cpp  Utility.cpp
